target/k3s/dsc-provider/data-space-connector/templates/dsconfig-deployment.yaml
---
# Source: data-space-connector/templates/dsconfig-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dsconfig
  namespace: "provider"
  labels:
    
    app.kubernetes.io/name: data-space-connector
    helm.sh/chart: data-space-connector-8.2.20
    app.kubernetes.io/instance: provider
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: dsconfig
      app.kubernetes.io/instance: provider
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dsconfig
        app.kubernetes.io/instance: provider
    spec:
      serviceAccountName: default
      containers:
        - name: dsconfig-static
          imagePullPolicy: Always
          image: "lipanski/docker-static-website:2.1.0"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: dsconfig-json
              mountPath: /home/static/.well-known/data-space-configuration
      volumes:
        - name: dsconfig-json
          configMap:
            name: dsconfig
