target/k3s/dsc-provider/data-space-connector/templates/rainbow-deployment.yaml
---
# Source: data-space-connector/templates/rainbow-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rainbow
  namespace: "provider"
  labels:
    
    app.kubernetes.io/name: data-space-connector
    helm.sh/chart: data-space-connector-8.2.20
    app.kubernetes.io/instance: provider
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: rainbow
      app.kubernetes.io/instance: provider
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rainbow
        app.kubernetes.io/instance: provider
    spec:
      serviceAccountName: default
      containers:
        - name: rainbow
          imagePullPolicy: Always
          image: quay.io/wi_stefan/rainbow:0.0.3
          args: [ "provider", "start" ]
          ports:
            - containerPort: 1234
              name: http
      volumes:
        - name: ccs-registration
          configMap:
            name: rainbow-registration
            defaultMode: 0755
