target/k3s/dsc-provider/data-space-connector/templates/rainbow-ingress.yaml
---
# Source: data-space-connector/templates/rainbow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rainbow
  namespace: "provider"
  labels:
    app.kubernetes.io/name: data-space-connector
    helm.sh/chart: data-space-connector-8.2.20
    app.kubernetes.io/instance: provider
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "rainbow-provider.127.0.0.1.nip.io"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rainbow
              port:
                number: 8080
